Implemented the Tire task and modified the AI file
