# src/main/java/com/bmw/maintenance/domain/TaskType.java
@@ -6,4 +6,5 @@ package com.bmw.maintenance.domain;
 public enum TaskType {
     OIL_CHANGE,
     BRAKE_INSPECTION,
+    TIRE_SERVICE,
 }
